# pomodoro

./: Makefile  alembic.ini  conftest.py  dependency.py  docker-compose.test.yml  docker-compose.yml  fixtures.py  main.py  pomodoro.db  pyproject.toml  settings.py
app/: __init__.py  consumer.py  dependency.py  exception.py  main.py  settings.py
app/client/: __init__.py  google_client.py  yandex_client.py
app/handlers/: __init__.py  auth.py  ping.py  tasks.py  user.py
app/infrastructure/broker/: accessor.py
app/infrastructure/cache/: accessor.py
app/infrastructure/database/: __init__.py  accessor.py
app/models/: user.py
app/repository/: __init__.py  task.py  task_cache.py  user.py
app/schema/: __init__.py  auth.py
app/service/: auth.py  task.py  user.py
app/tasks/: handlers.py  models.py  schema.py  service.py
app/tasks/repository/: __init__.py  repository.py  repository_cache.py
app/users/auth/: handlers.py  schema.py  service.py
app/users/user_profile/: handlers.py  repository.py  service.py
cache/: accessor.py
client/: __init__.py  google_client.py  yandex_client.py
database/: __init__.py  accessor.py  database.py  models.py
handlers/: __init__.py  auth.py  ping.py  tasks.py  user.py
infra/: gunicorn.conf.py
models/: tasks.py  user.py
repository/: __init__.py  task.py  task_cache.py  user.py
schema/: __init__.py  tasks.py
service/: auth.py  task.py  user.py
tests/fixtures/: infrastructure.py
tests/fixtures/auth/: auth_service.py  clients.py
tests/fixtures/users/: user_model.py  user_repository.py
worker/: celery.py
(+6 files in other folders)
